--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -2,44 +2,32 @@
 layout: noframe
 ---
 
-<section class="grid-x">
-  <form class="cell " id="loginComponent">
-		<header class="grid-x">
-			<h3 class="cell text-center">Bizcube Ticketing</h3>
+<section>
+  <form id="loginComponent">
+		<header>
+			<h3 class="text-center">Bizcube Ticketing</h3>
 		</header>
-			<div class="grid-x">
-				<div class="cell">
-					<label>
-						Username
-						<input type="text" id="username" name="username"/>
-					</label>
-				</div>
+			<div>
+				<label>
+					Username
+					<input type="text" id="username" name="username"/>
+				</label>
 			</div>
-			<div class="grid-x">
-				<div class="cell">
+				<div>
 					<label>
 						Password
 						<input type="password" id="password" name="password"/>
 					</label>
 				</div>
-			</div>
-			<div class="grid-x">
-				<div class="cell text-center">
+				<div class="text-center">
 						<input type="checkbox" id="rememberMe" name="rememberMe">
 						<label for="rememberMe">Stay signed in</label>
 				</div>
-			</div>
-			<div class="grid-x">
-				<div class="cell text-center">
+				<div class="text-center">
 					<a href="{{root}}iContact/Contacts/EmailRetrieval.aspx">Can't access your account?</a>
 				</div>
-			</div>
-      <div class="grid-x">
-				<div class="cell">
-          <div class="formCallout callout"></div>
-        </div>
-      </div>
-			<footer class="grid-x">
+        <div class="formCallout callout"></div>
+			<footer>
 					<button type="button" id="submit" class="cell small-12  medium-12">Login</button>
 			</footer>
 	</form><!-- case add form end -->
