added tablelines style

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,10 +1,11 @@
 ---
 layout: dashboard
 ---
+<h1><small>Welcome</small> Mr Dell Goh</h1>
 <div id="mainWidgets">
   <section id="widget-events" class="widget">
     <h2>Upcoiming Events</h2>
-    <table>
+    <table class="table-lines">
       <thead>
         <tr>
           <th>Date</th>
@@ -34,7 +35,7 @@ layout: dashboard
   </section>
   <section id="widget-donations" class="widget">
     <h2>Latest Donations</h2>
-    <table>
+    <table class="table-lines">
       <thead>
         <tr>
           <th>Date</th>
