update of widgets

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -61,7 +61,7 @@ layout: dashboard
         </tr>
       </tbody>
     </table>
-    <footer><a href="#">New donation</a><a href="#">View moduleMenu-communications list</a></footer>
+    <footer><a href="#">New donation</a><a href="#">View donations list</a></footer>
   </section>
   <section id="widget-charts" class="widget">
     <h2>Charts</h2>
