update widgets html

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -65,13 +65,15 @@ layout: dashboard
   </section>
   <section id="widget-charts" class="widget">
     <h2>Charts</h2>
-    <div class="chart">
-      <h3>Member Summary</h3>
-      <img src="{{root}}/assets/img/charts/member-summary.jpg" alt="Member Summary Chart">
-    </div>
-    <div class="chart">
-      <h3>Engagement</h3>
-      <img src="{{root}}/assets/img/charts/engagement.jpg" alt="Engagement Chart">
+    <div class="charts">
+      <div class="chart">
+        <h3>Member Summary</h3>
+        <img src="{{root}}/assets/img/charts/chart001.jpg" alt="Member Summary Chart">
+      </div>
+      <div class="chart">
+        <h3>Engagement</h3>
+        <img src="{{root}}/assets/img/charts/chart002.jpg" alt="Engagement Chart">
+      </div>
     </div>
   </section>
 </div> <!-- main widgets area -->
