modified quick links

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -80,13 +80,16 @@ layout: dashboard
 <aside id="sideWidgets">
   <div id="quickLinks" class="widget">
     <ul>
-      <li><a href="">New Donation</a></li>
-      <li><a href="">New Event</a></li>
-      <li><a href="">New Volunteer</a></li>
+      <li><a href="#" id="addDonation" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-donation.png" alt="icon"></i> New Donation</a></li>
+      <li><a href="#" id="addEvent" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-event-add.png" alt="icon"></i> New Event</a></li>
+      <li><a href="#" id="addVolunteer" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-volunteer.png" alt="icon"></i> New Volunteer</a></li>
     </ul>
   </div>
   <div id="calendar" class="widget">
     <h3>Calendar</h3>
+    <p>
+      <img src="{{root}}/assets/img/calendar.jpg" alt="" >
+    </p>
   </div>
   <div id="reports" class="widget">
     <h3>Reports</h3>
