--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,62 +5,66 @@ layout: dashboard
 <div id="mainWidgets">
   <section id="widget-events" class="widget">
     <h2>Upcoiming Events</h2>
-    <table class="table-lines">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Event</th>
-          <th>Created By</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>12 / 05 / 18</td>
-          <td>Volunteer Orientation</td>
-          <td>Soon Sing Suen</td>
-        </tr>
-        <tr>
-          <td>14 / 05 / 18</td>
-          <td>KidZania</td>
-          <td>Susie Green</td>
-        </tr>
-        <tr>
-          <td>01 / 06 / 18</td>
-          <td>WWF</td>
-          <td>Susie Green</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-scroll">
+      <table class="table-lines">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Event</th>
+            <th>Created By</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>12 / 05 / 18</td>
+            <td>Volunteer Orientation</td>
+            <td>Soon Sing Suen</td>
+          </tr>
+          <tr>
+            <td>14 / 05 / 18</td>
+            <td>KidZania</td>
+            <td>Susie Green</td>
+          </tr>
+          <tr>
+            <td>01 / 06 / 18</td>
+            <td>WWF</td>
+            <td>Susie Green</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <footer><a href="#">Create new event</a><a href="#">View whole event list</a></footer>
   </section>
   <section id="widget-donations" class="widget">
     <h2>Latest Donations</h2>
-    <table class="table-lines">
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Donors</th>
-          <th>Amount</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>01 / 05 / 18</td>
-          <td>Joshua Wu</td>
-          <td>100.00</td>
-        </tr>
-        <tr>
-          <td>08 / 05 / 18</td>
-          <td>Donald Lee</td>
-          <td>800.00</td>
-        </tr>
-        <tr>
-          <td>09 / 05 / 18</td>
-          <td>Brock Wee</td>
-          <td>90.00</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-scroll">
+      <table class="table-lines">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Donors</th>
+            <th>Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>01 / 05 / 18</td>
+            <td>Joshua Wu</td>
+            <td>100.00</td>
+          </tr>
+          <tr>
+            <td>08 / 05 / 18</td>
+            <td>Donald Lee</td>
+            <td>800.00</td>
+          </tr>
+          <tr>
+            <td>09 / 05 / 18</td>
+            <td>Brock Wee</td>
+            <td>90.00</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <footer><a href="#">New donation</a><a href="#">View donations list</a></footer>
   </section>
   <section id="widget-charts" class="widget">
