--- a/src/pages/iContacts/profile.html
+++ b/src/pages/iContacts/profile.html
@@ -1,19 +1,59 @@
 ---
 layout: columns-3
 ---
-
-<section id="profile" class="grid-x">
-   <div class="welcome cell">
-      Welcome
-      <b class="profileName">
-         <!-- user displayname -->
-      </b>
-   </div>
-   <!--<div class="organisation cell">HCA Hospice</div>-->
-</section>
+<h1><small>Welcome</small> <b class="profileName"></b></h1>
 <!-- profile end -->
-<section class="grid-x">
-  <div class="cell">
-    <a href="{{root}}Ticketing/TicketingHome.html"><img src="{{root}}assets/img/support-smiley.png" width="100" height="100"></a>
-  </div>
+<div id="sidebar1" class="sidebar">
+  <ul class="subLinks">
+    <li><a href="#">Basic Information</a></li>
+    <li><a href="#">Contact Information</a></li>
+    <li><a href="#">Group Roles</a></li>
+    <li><a href="#">Donation History</a></li>
+    <li><a href="#">Family / Household</a></li>
+    <li><a href="#">Education</a></li>
+    <li><a href="#">Relationship</a></li>
+    <li><a href="#">Miscellaneous</a></li>
+  </ul>
+</div>
+<section id="contentWindow">
+  <h2>Basic Information</h2>
+  <div class="labelText">Title</div>
+  <div class="text" id="basicInformation-Title">Mr</div>
+  <div class="labelText">Surname / Family Name</div>
+  <div class="text" id="basicInformation-LastName">Goh</div>
+  <div class="labelText">First Name</div>
+  <div class="text" id="basicInformation-firstName">Dell</div>
+  <div class="labelText">Middle Name</div>
+  <div class="text" id="basicInformation-middleName"></div>
+  <div class="labelText">Other Name</div>
+  <div class="text" id="basicInformation-otherName"></div>
+  <div class="labelText">Display Name</div>
+  <div class="text" id="basicInformation-displayName">Dell</div>
+  <div class="labelText">Gender</div>
+  <div class="text" id="basicInformation-gender">Male</div>
+  <div class="labelText">NRIC</div>
+  <div class="text" id="basicInformation-gender">S1234567A</div>
+  <div class="labelText">Other ID</div>
+  <div class="text" id="basicInformation-otherID"></div>
+  <div class="labelText">Birthday</div>
+  <div class="text" id="basicInformation-birthday"></div>
+  <div class="labelText">Remarks</div>
+  <div class="text" id="basicInformation-Remarks"></div>
 </section>
+<aside id="sidebar2" class="sidebar">
+  <div class="profileSummary">
+    <h3>Contact</h3>
+    <ul>
+      <li><a href="tel:91110111">9111 0111</a></li>
+      <li><a href="mailto:dell.goh@bss.org.sg">dell.goh@bss.org.sg</a></li>
+    </ul>
+    <h3>Role</h3>
+    <p>Administrator</p>
+    <h3>Group</h3>
+    <ul >
+      <li><a href="#">Administrator</a></li>
+      <li><a href="#">Donation</a></li>
+      <li><a href="#">Volunteer</a></li>
+    </ul>
+  </div>
+</aside>
