added profile for column 3 template, for styling

--- a/src/pages/iContacts/profile.html
+++ b/src/pages/iContacts/profile.html
@@ -2,10 +2,14 @@
 layout: columns-3
 ---
 <h1><small>Welcome</small> <b class="profileName"></b></h1>
+
+<div class="profile">
+  <small>Welcome</small> <b class="profileName"></b>
+</div>
 <!-- profile end -->
-<div id="sidebar1" class="sidebar">
+<div id="sidebar1" class="sidebar noBg">
   <ul class="subLinks">
-    <li><a href="#">Basic Information</a></li>
+    <li><a href="#" class="selected">Basic Information</a></li>
     <li><a href="#">Contact Information</a></li>
     <li><a href="#">Group Roles</a></li>
     <li><a href="#">Donation History</a></li>
@@ -41,11 +45,11 @@ layout: columns-3
   <div class="text" id="basicInformation-Remarks"></div>
 </section>
 <aside id="sidebar2" class="sidebar">
-  <div class="profileSummary">
+  <div id="profileSummary" class="component">
     <h3>Contact</h3>
-    <ul>
-      <li><a href="tel:91110111">9111 0111</a></li>
-      <li><a href="mailto:dell.goh@bss.org.sg">dell.goh@bss.org.sg</a></li>
+    <ul class="noBullets">
+      <li><a href="tel:91110111"><i class="icon"><img src="{{root}}assets/img/icon-dark-small-phone.png" alt="phone icon" /></i> 9111 0111</a></li>
+      <li><a href="mailto:dell.goh@bss.org.sg"><i class="icon"><img src="{{root}}assets/img/icon-dark-small-mail.png" alt="email icon" /></i> dell.goh@bss.org.sg</a></li>
     </ul>
     <h3>Role</h3>
     <p>Administrator</p>
