added sidebar style. removed sidebarwidgets style

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -81,7 +81,7 @@ layout: dashboard
     </div>
   </section>
 </div> <!-- main widgets area -->
-<aside id="sideWidgets">
+<aside id="sideWidgets" class="sidebar">
   <div id="quickLinks" class="widget">
     <ul>
       <li><a href="#" id="addDonation" class="buttonType3 left"><i class="icon"><img src="{{root}}/assets/img/icon-light-donation.png" alt="icon"></i> New Donation</a></li>
