added side links. added header and side links in profile.html

--- a/src/pages/iContacts/profile.html
+++ b/src/pages/iContacts/profile.html
@@ -19,8 +19,10 @@ layout: columns-3
     <li><a href="#">Miscellaneous</a></li>
   </ul>
 </div>
-<section id="contentWindow">
-  <h2>Basic Information</h2>
+<section id="contentWindow" class="formTextContainer ">
+  <header>
+    <h2>Basic Information <small class="sideLinks"><a href="#">edit</a></small></h2>
+  </header>
   <div class="labelText">Title</div>
   <div class="text" id="basicInformation-Title">Mr</div>
   <div class="labelText">Surname / Family Name</div>
