--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,14 +4,14 @@ layout: dashboard
 <h1><small>Welcome</small> Mr Dell Goh</h1>
 <div id="mainWidgets">
   <section id="widget-events" class="widget">
-    <h2>Upcoiming Events</h2>
+    <h2>Upcoming Events</h2>
     <div class="table-scroll">
       <table class="table-lines">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Event</th>
-            <th>Created By</th>
+            <th class="text-left">Date</th>
+            <th class="text-left">Event</th>
+            <th class="text-left">Created By</th>
           </tr>
         </thead>
         <tbody>
@@ -41,9 +41,9 @@ layout: dashboard
       <table class="table-lines">
         <thead>
           <tr>
-            <th>Date</th>
-            <th>Donors</th>
-            <th>Amount</th>
+            <th class="text-left">Date</th>
+            <th class="text-left">Donors</th>
+            <th class="text-left">Amount</th>
           </tr>
         </thead>
         <tbody>
