update donation batch content

--- a/src/pages/Donations/batch.html
+++ b/src/pages/Donations/batch.html
@@ -1,18 +1,104 @@
 ---
 layout: columns-2
 ---
-<section id="profile" class="grid-x">
-   <div class="welcome cell">
-      Welcome
-      <b class="profileName">
-         <!-- user displayname -->
-      </b>
-   </div>
-   <!--<div class="organisation cell">HCA Hospice</div>-->
-</section>
-<!-- profile end -->
-<section class="grid-x">
-  <div class="cell">
-    <a href="{{root}}Ticketing/TicketingHome.html"><img src="{{root}}assets/img/support-smiley.png" width="100" height="100"></a>
+
+<h1>
+  Donation
+</h1>
+
+<div class="profile">
+ <small>Welcome</small> <b class="profileName"></b>
+</div>
+
+<div id="sidebar1" class="sidebar noBg">
+  <ul class="subLinks">
+    <li><a href="#" class="selected">Batch Donation Listing</a></li>
+    <li><a href="#">Online Donation
+Administration</a></li>
+    <li><a href="#">Donor Matching</a></li>
+    <li><a href="#">Account Export</a></li>
+    <li><a href="#">IRAS</a></li>
+    <li><a href="#">Convert Distribution</a></li>
+    <li><a href="#">Convert Tax Receipt</a></li>
+    <li><a href="#">Reports</a></li>
+  </ul>
+</div>
+<section id="contentWindow" class="formTextContainer ">
+  <header >
+    <h2>Batch Donation Listing</h2>
+  </header>
+
+  <div class="listingContainer">
+    <header class="tabBoxContainer">
+      <button type="href" class="tabBoxButton" data-target="filterOptions"><i class="icon"><img src="{{root}}assets/img/icon-light-filter.png" alt="icon"/></i>Filters</button>
+      <button class="buttonType2 buttonType2Add" data-open="donationBatch_addForm">New Batch Donation</button>
+      <form class="tabBoxContent reveal" id="filterOptions">
+        <button class="close-button tabBoxButtonClose " aria-label="Dismiss alert" type="button" data-close>
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div>
+          <label>Text</label>
+          <input type="text" />
+        </div>
+        <footer>
+        </footer>
+      </form>
+    </header>
+    <div class="table-scroll">
+      <table class="table-lines hover">
+        <thead>
+          <tr>
+            <th>Batch ID</th>
+            <th>Batch Type</th>
+            <th>Amount</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="selected">
+            <td>CC180416-01</td>
+            <td>I-Bank</td>
+            <td>1,500.00</td>
+            <td>Pending</td>
+          </tr>
+          <tr>
+            <td>IB180415-01</td>
+            <td>I-Bank</td>
+            <td>1,000.00</td>
+            <td>Pending</td>
+          </tr>
+          <tr>
+            <td>CC180415-01</td>
+            <td>Card</td>
+            <td>6,700.00</td>
+            <td>Pending</td>
+          </tr>
+          <tr>
+            <td>CC180414-01</td>
+            <td>I-Bank</td>
+            <td>4,050.00</td>
+            <td>Pending</td>
+          </tr>
+          <tr>
+            <td>CC180413-01</td>
+            <td>Card</td>
+            <td>300.00</td>
+            <td>Pending</td>
+          </tr>
+          <tr>
+            <td>CC180412-01</td>
+            <td>Card</td>
+            <td>400.00</td>
+            <td>Pending</td>
+          </tr>
+        </tbody>
+      </table>
+      <footer >
+        <button type="href" id="donationBatch_confirmedIssuedReceipt">Confirmed &amp; Issue Receipt</button>
+        <button type="href" id="donationBatch_cancel">Cancel</button>
+        <button type="href" id="donationBatch_void">Void</button>
+        <button type="href" id="donationBatch_delete">Delete</button>
+      </footer>
+    </div>
   </div>
 </section>
