--- a/src/pages/Donations/batch.html
+++ b/src/pages/Donations/batch.html
@@ -23,14 +23,14 @@ Administration</a></li>
     <li><a href="#">Reports</a></li>
   </ul>
 </div>
-<section id="contentWindow" class="formTextContainer ">
+<div id="contentWindow" class="formTextContainer ">
   <header >
     <h2>Batch Donation Listing</h2>
   </header>
 
   <div class="listingContainer">
     <header class="tabBoxContainer">
-      
+
         <button type="href" class="tabBoxButton" data-target="filterOptions"><i class="icon"><img src="{{root}}assets/img/icon-light-filter.png" alt="icon"/></i>Filters</button>
         <form class="tabBoxContent reveal" id="filterOptions">
           <button class="close-button tabBoxButtonClose " aria-label="Dismiss alert" type="button" data-close>
@@ -104,4 +104,4 @@ Administration</a></li>
       </footer>
     </div>
   </div>
-</section>
+</div>
