modified table structure

--- a/src/pages/reference.html
+++ b/src/pages/reference.html
@@ -97,87 +97,105 @@ Administration</a></li>
   <section id="table">
     <h2>Table</h2>
     <h3>Basic</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Title</th>
-          <th>Title</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-scroll">
+      <table>
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Title</th>
+            <th>Title</th>
+            <th>Title</th>
+            <th>Title</th>
+            <th>Title</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <hr>
     <h3>Just Bottom Line</h3>
-    <table class="table-lines">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Title</th>
-          <th>Title</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-scroll">
+      <table class="table-lines">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Title</th>
+            <th>Title</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <h3>Hover</h3>
-    <table class="table-lines hover">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Title</th>
-          <th>Title</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-        <tr>
-          <td>Column</td>
-          <td>Column</td>
-          <td>Column</td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="table-scroll">
+      <table class="table-lines hover">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Title</th>
+            <th>Title</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+          <tr>
+            <td>Column</td>
+            <td>Column</td>
+            <td>Column</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     <h3>Table Scroll</h3>
     <div class="table-scroll">
       <table class="table-lines hover">
